--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@prettier/plugin-pug": "^2.4.2",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.7",
     "vite": "^4.2.0",
     "vite-plugin-pages": "^0.29.0",
     "vite-plugin-pug": "^0.3.2"
+  },
+  "dependencies": {
+    "eslint-plugin-pug": "^1.2.5"
   }
 }
