--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "@prettier/plugin-pug": "^2.4.2",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-pug": "^1.2.5",
+    "fast-glob": "^3.2.12",
     "prettier": "^2.8.7",
+    "sass": "^1.60.0",
+    "svg-sprite-loader": "^6.0.11",
+    "svgo": "^3.0.2",
     "vite": "^4.2.0",
     "vite-plugin-pages": "^0.29.0",
-    "vite-plugin-pug": "^0.3.2"
+    "vite-plugin-pug": "^0.3.2",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-svg-sprite": "^0.3.1"
   },
   "dependencies": {
-    "eslint-plugin-pug": "^1.2.5"
+    "glob": "^9.3.2"
   }
 }
