--- a/package.json
+++ b/package.json
@@ -16,13 +16,8 @@
     "fast-glob": "^3.2.12",
     "prettier": "^2.8.7",
     "sass": "^1.60.0",
-    "svg-sprite-loader": "^6.0.11",
     "svgo": "^3.0.2",
-    "vite": "^4.2.0",
-    "vite-plugin-pages": "^0.29.0",
-    "vite-plugin-pug": "^0.3.2",
-    "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-svg-sprite": "^0.3.1"
+    "vite": "^4.2.0"
   },
   "dependencies": {
     "glob": "^9.3.2"
