--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,17 @@
 {
+  "plugins": [
+    "@prettier/plugin-pug"
+  ],
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "importOrderSeparation": true
+  "importOrderSeparation": true,
+  "pugSingleQuote": false,
+  "importOrder": [
+    "^vite$",
+    "<THIRD_PARTY_MODULES>",
+    "^./plugins",
+    "^./|^../"
+  ]
 }
