--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   },
   "devDependencies": {
     "@prettier/plugin-pug": "^2.4.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-pug": "^1.2.5",
     "fast-glob": "^3.2.12",
     "prettier": "^2.8.7",
+    "pug": "^3.0.2",
     "sass": "^1.60.0",
+    "stylelint": "^15.3.0",
+    "stylelint-prettier": "^3.0.0",
     "svgo": "^3.0.2",
-    "vite": "^4.2.0"
-  },
-  "dependencies": {
-    "glob": "^9.3.2"
+    "vite": "^4.2.0",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
