--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "create-vite-native-app",
+  "name": "vite-app",
+  "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
