--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.2.0",
     "nodejs-logger-n": "^1.0.3",
+    "postcss-nesting": "^11.2.2",
     "prettier": "^2.8.7",
     "pug": "^3.0.2",
     "sass": "^1.60.0",
