--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,15 @@
 {
-  "plugins": ["stylelint-prettier"],
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-standard-scss"
+  ],
+  "plugins": [
+    "stylelint-prettier",
+    "stylelint-scss"
+  ],
   "rules": {
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
     "block-closing-brace-newline-after": "always-multi-line",
     "block-closing-brace-empty-line-before": "never",
     "block-closing-brace-space-before": "always",
