--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "pug": "^3.0.2",
     "sass": "^1.60.0",
     "stylelint": "^15.3.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "stylelint-prettier": "^3.0.0",
+    "stylelint-scss": "^4.6.0",
     "svgo": "^3.0.2",
     "vite": "^4.2.0",
     "vite-mpa": "^1.0.6",
