--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pug": "^3.0.2",
     "sass": "^1.60.0",
     "stylelint": "^15.3.0",
+    "stylelint-config-standard": "^31.0.0",
     "stylelint-config-standard-scss": "^7.0.1",
     "stylelint-prettier": "^3.0.0",
     "stylelint-scss": "^4.6.0",
